@@ -248,6 +248,7 @@ def process_arguments(**kw):
     parser.add_argument("-rp", "--retry-proxy", type=str, default="on")
     parser.add_argument("-rc", "--retry-credentials", type=str, default="on")
     parser.add_argument("-ap", "--allocate-proxy", nargs="*", type=str)
+    parser.add_argument("-wc", "--without-cookies", action="store_true")
     parser.add_argument("-m", "--merge", nargs="*", type=str)
     parser.add_argument("-s", "--silent", action="store_true")
     _args = parser.parse_args()
