@@ -115,6 +115,13 @@ pull最近登录成功的、使用在相同version的run.py脚本里的密码，
 
 
 
+-wc, --without-cookies
+------------------------------------------------------------------------
+如果此参数存在，则脚本会忽视已经存在的cookies，包括本地cookies，也包括-p带来的cookies。
+因此，脚本会强制进行一次全新的登录。
+
+
+
 
 (3)其他参数
 -c, --chrome
