@@ -1,7 +1,8 @@
 run-1.43
 ------------------------------------------------------------------------
 1.新增-ap特性：支持按照特定的group和tag来分配代理。现在-ap可以附加group，tag两个参数，同时兼容老用法
-2.修改关于统计action成功率方面和主服务器的交流方式。针对代理的脚本action成功率统计功能已经开放。
+2.修改关于统计action成功率方面和主服务器的交流方式。针对代理的脚本action成功率统计功能已经开放
+3.新增无cookies模式，强制重新登录，配合前端登录模块
 
 
 run-1.42
@@ -57,7 +58,7 @@ droplet.py远程脚本管理器诞生！
 run-1.32
 ------------------------------------------------------------------------
 统计所有任务中任何类型的action的执行情况。包括成功次数，失败次数
-统计信息自动同步到主服务器，配合前端即时查看。
+统计信息自动同步到主服务器，配合前端即时查看
 
 
 run-1.31
